--- a/src/app/aaacesa/previos/previos.component.html
+++ b/src/app/aaacesa/previos/previos.component.html
@@ -118,19 +118,19 @@
               </div>
   
               <div class="col status-filter">            
-                <div class="status-filter__circle status-filter__circle--PAAACESA"></div>
+                <div class="status-filter__circle status-filter__circle--PendienteAAACESA"></div>
                   <div class="status-filter__text">
                     <label (click)="applyFilter(2)">
-                      <p><span class="status-filter__number">{{ countStatus.PAAACESA }}</span> P.AAACESA </p>
+                      <p><span class="status-filter__number">{{ countStatus.PendienteAAACESA }}</span> P.AAACESA </p>
                     </label>
                   </div>
               </div>
   
               <div class="col status-filter">            
-                <div class="status-filter__circle status-filter__circle--PCliente"></div>
+                <div class="status-filter__circle status-filter__circle--PendienteCliente"></div>
                   <div class="status-filter__text">
                     <label (click)="applyFilter(3)">
-                      <p><span class="status-filter__number">{{ countStatus.PCliente }}</span> P.Cliente </p>
+                      <p><span class="status-filter__number">{{ countStatus.PendienteCliente }}</span> P.Cliente </p>
                     </label>
                   </div>
               </div>
@@ -312,7 +312,7 @@
                                   <div class="row">
                                     <div class="col">
                                       <h5 class="detail-text">Nombre Completo </h5>
-                                      <p class="detail-text">{{detailData.Nombre}}</p>    
+                                      <p class="detail-text">{{detailData.Nombre}} {{detailData.Paterno}} {{detailData.Materno}}</p>    
                                     </div>
                                   </div>
 
@@ -352,38 +352,26 @@
 
                           <hr class="dividerb">
 
-                          <div class="row mb-1" style="text-align: center;">
-                            <!-- <div class="col-sm-12 col-md-12 col-lg-12"> -->
-                              
-                              <!-- <div class="row"> -->
-                                <div *ngFor="let documento of detailData.Documentos">
-                                  <div class="col-sm-4 col-md-4 col-lg-4">
-                                    <div class="row">
-                                        <div class="col-lg-12 status-filter">            
-                                          <div class="status-filter__circle status-filter__circle--{{documento.Estatus | statusPipe }}"></div>
-                                          <div class="status-filter__text"><p> {{documento.Estatus}} </p></div>
-                                        </div>
-                                    </div>
-                                    <div class="row">
-                                      <div (click)="openDocument(documento.IdDocumento)" class="col">                                      
-                                          <h1 style="font-size: 5rem"><i class="fas {{documento.NombreDocumento | fileIconPipe}}"></i></h1>
-                                          <p>{{documento.NombreDocumento}}</p>                                                                                    
-                                      </div>
-                                    </div>
-                                  </div>  
-                                </div>                                                                                                              
-                              <!-- </div> -->
-
-                            <!-- </div> -->
+                          <div class="row mb-3">                
+                            <div *ngFor="let file of detailData.Documentos" class="col col-lg-3">
+                              <div>            
+                                <div class="status-filter__circle status-filter__circle--{{file.Estatus | statusPipe }}"></div>
+                                <div class="status-filter__text"><p> {{file.Estatus}} </p></div>
+                              </div>
+                              <h1 (click)="openDocument(file.IdDocumento)" style="font-size: 5rem; text-align: center"><i class="fas {{file.NombreDocumento | fileIconPipe}}"></i></h1>
+                              <p style="word-break: break-all; text-align: center" class="detail-text">{{file.NombreDocumento}}</p>                                                                                               
+                            </div>                      
                           </div>
+                          
                           </div> <!-- card-body -->                
                         </div> <!-- card -->                
                         </div>
                         <!--  End left -->
               
                         <!-- Start Rigth -->
-                        <div class="col-sm-4 col-md-4 col-lg-4 card">
-
+                        <div class="col-sm-4 col-md-4 col-lg-4">
+                          <div class="card">
+                          <div class="card-body">
                           <div class="row">
                             <div class="col-sm-12 col-md-12 col-lg-12">
                               <h6>Estado</h6>
@@ -431,6 +419,8 @@
 
                               </mat-accordion>                                
                             </div>
+                          </div>
+                          </div>
                           </div>
                         </div>
                         <!--  End Rigth -->
