--- a/src/app/aaacesa/dialogs/dialog-create-previos.component.html
+++ b/src/app/aaacesa/dialogs/dialog-create-previos.component.html
@@ -1,6 +1,6 @@
 <h2 mat-dialog-title>Nuevo Previo</h2>
 <mat-dialog-content class="mat-typography">
-  <mat-horizontal-stepper (selectionChange)="stepClick($event)" labelPosition="bottom" [linear]="isLinear" #stepper>
+  <mat-horizontal-stepper *ngIf="!successResponse" (selectionChange)="stepClick($event)" labelPosition="bottom" [linear]="isLinear" #stepper>
     <mat-step [stepControl]="firstFormGroup">
     <!-- <ng-template matStepLabel>Paso 1</ng-template> -->
 
@@ -12,14 +12,24 @@
                 <div class="col-sm-6 col-md-6 col-lg-6">                
                   <mat-form-field class="input-full-width">         
                     <input matInput type="text" formControlName="masterCtrl" placeholder="Guía Master"/> 
-                  </mat-form-field>     
-                  <!-- <mat-error *ngIf="firstFormGroup.get('masterCtrl').errors?.required">
-                    Please enter a valid email address
-                  </mat-error>           -->
+                    <mat-error *ngIf="firstFormGroup.get('masterCtrl').errors?.required">
+                      Este campo es obligatorio
+                    </mat-error>
+                    <mat-error *ngIf="secondFormGroup.get('patenteCtrl').errors?.pattern">
+                      Debe ser una Guia Master
+                    </mat-error>    
+                  </mat-form-field>                              
+
+                  <mat-form-field class="input-full-width">    
+                    <input matInput type="text" formControlName="houseCtrl" placeholder="Guía House"/>  
+                    <mat-error *ngIf="firstFormGroup.get('houseCtrl').errors?.required">
+                      Este campo es obligatorio
+                    </mat-error>   
+                  </mat-form-field> 
                 </div>
                 <div class="col-sm-6 col-md-6 col-lg-6">                                                
                   <mat-form-field class="input-full-width">    
-                    <input matInput type="text" formControlName="houseCtrl" placeholder="Guía House"/>  
+                    <input matInput type="text" placeholder="Referencia"/>                      
                   </mat-form-field>                 
                 </div>
               </div>          
@@ -27,13 +37,15 @@
           </div>   
 
           <div class="row mt-5">
-            <button matStepperNext class="btn btn-pill btn-primary">Siguiente</button>            
+            <div class="col-lg-12 text-center">
+              <button (click)="validarCampos(0)" matStepperNext class="btn btn-pill btn-primary">Siguiente</button>            
+            </div>
           </div>
       </form>
     </div>
       
     </mat-step>
-    <mat-step [stepControl]="secondFormGroup">
+    <mat-step (click)="validarCampos(0)" [stepControl]="secondFormGroup">
       
       <form [formGroup]="secondFormGroup">
         <!-- <ng-template matStepLabel>Paso 2</ng-template> -->
@@ -43,16 +55,25 @@
                 <div class="col-lg-4">
                   <mat-form-field class="input-full-width">
                     <input matInput type="text" formControlName="nombreCtrl" placeholder="Nombre"/>
+                    <mat-error *ngIf="secondFormGroup.get('nombreCtrl').errors?.required">
+                      Este campo es obligatorio
+                    </mat-error>  
                   </mat-form-field>
                 </div>
                 <div class="col-lg-4">
                   <mat-form-field class="input-full-width">
                     <input matInput type="text" formControlName="paternoCtrl" placeholder="Apellido Paterno"/>
+                    <mat-error *ngIf="secondFormGroup.get('paternoCtrl').errors?.required">
+                      Este campo es obligatorio
+                    </mat-error>  
                   </mat-form-field>
                 </div>
                 <div class="col-lg-4">
                   <mat-form-field class="input-full-width">
                     <input matInput type="text" formControlName="maternoCtrl" placeholder="Apellido Materno"/>
+                    <mat-error *ngIf="secondFormGroup.get('maternoCtrl').errors?.required">
+                      Este campo es obligatorio
+                    </mat-error> 
                   </mat-form-field>
                 </div>              
               </div>
@@ -61,11 +82,20 @@
                   <div class="col-lg-4">
                     <mat-form-field class="input-full-width">
                       <input matInput type="text" formControlName="patenteCtrl" placeholder="Patente"/>
+                      <mat-error *ngIf="secondFormGroup.get('patenteCtrl').errors?.required">
+                        Este campo es obligatorio
+                      </mat-error> 
+                      <mat-error *ngIf="secondFormGroup.get('patenteCtrl').errors?.pattern">
+                        Debe ser un numero
+                      </mat-error> 
                     </mat-form-field>
                   </div>
                   <div class="col-lg-4">
                     <mat-form-field class="input-full-width">
-                      <input matInput type="text" formControlName="fechaPrevioCtrl" #dp="bsDatepicker" bsDatepicker placeholder="Fecha">                                                                                                                                    
+                      <input matInput type="text" formControlName="fechaPrevioCtrl" #dp="bsDatepicker" bsDatepicker placeholder="Fecha">
+                      <mat-error *ngIf="secondFormGroup.get('fechaPrevioCtrl').errors?.required">
+                        Este campo es obligatorio
+                      </mat-error> 
                     </mat-form-field>      
 
                     <!-- <mat-form-field class="input-full-width">                      
@@ -77,6 +107,12 @@
                   <div class="col-lg-4">
                     <mat-form-field class="input-full-width">
                       <input matInput type="text" formControlName="numGafeteCtrl" placeholder="No. Gafete"/>
+                      <mat-error *ngIf="secondFormGroup.get('numGafeteCtrl').errors?.required">
+                        Este campo es obligatorio
+                      </mat-error> 
+                      <mat-error *ngIf="secondFormGroup.get('numGafeteCtrl').errors?.pattern">
+                        Debe ser un numero
+                      </mat-error> 
                     </mat-form-field>
                   </div>              
               </div>
@@ -90,6 +126,12 @@
                 <div class="col-lg-4">
                   <mat-form-field class="input-full-width">
                     <input matInput type="text" class="no-spinners" formControlName="pesoCtrl" placeholder="Peso"/>
+                    <mat-error *ngIf="secondFormGroup.get('pesoCtrl').errors?.required">
+                        Este campo es obligatorio
+                    </mat-error> 
+                    <mat-error *ngIf="secondFormGroup.get('pesoCtrl').errors?.pattern">
+                      Debe ser un numero
+                    </mat-error> 
                   </mat-form-field>
                 </div>                           
               </div>
@@ -103,7 +145,7 @@
               <div class="row mb-3">
                 <div class="col-lg-12">
                   <mat-form-field class="input-full-width">
-                    <textarea matInput formControlName="comentarioCtrl" placeholder="Comentario" rows="3"></textarea>
+                    <textarea matInput formControlName="comentarioCtrl" placeholder="Comentario"></textarea>
                   </mat-form-field>
                 </div>            
               </div>
@@ -111,7 +153,7 @@
         </div>
 
         <div>
-          <button matStepperNext class="btn btn-pill btn-primary">Siguiente</button>
+          <button (click)="validarCampos(1)" matStepperNext class="btn btn-pill btn-primary">Siguiente</button>
         </div>
       </form>
       
@@ -226,14 +268,31 @@
               </div>
         
         <div>        
-          <button matStepperPrevious class="btn btn-pill btn-primary">Regresar</button>
-          <button (click)="guardarFirstForm()" class="btn btn-pill btn-primary">Siguiente</button>
+          <button matStepperPrevious class="btn btn-pill btn-primary mr-3">Regresar</button>
+          <button (click)="crearPrevio()" class="btn btn-pill btn-primary">Siguiente</button>
         </div>
       
     </mat-step>    
   </mat-horizontal-stepper>
+
+  <div *ngIf="successResponse" class="container mt-3">
+    <div class="conatiner">
+      <div class="row">
+        <div class="col-12 text-center">
+          Gracias
+        </div>
+        <div class="col-12 text-center">
+          {{responseMessage}}
+        </div>
+        <div class="col-12 text-center mt-5 ">
+          <button (click)="closeDialog('true')" class="btn btn-pill btn-primary">Ok</button>  
+        </div>
+      </div>        
+    </div>
+  </div>
+
 </mat-dialog-content>
-<mat-dialog-actions align="end">
-  <button mat-dialog-close class="btn btn-pill btn-primary">Cancelar</button>
+<mat-dialog-actions *ngIf="!successResponse" align="end">
+  <button mat-dialog-close class="btn btn-pill btn-primary">Cancelar</button>  
   <!-- <button [mat-dialog-close]="true" cdkFocusInitial>Install</button> -->
 </mat-dialog-actions>
