--- a/src/app/aaacesa/admin-user/detalle-user/detalle-user.component.html
+++ b/src/app/aaacesa/admin-user/detalle-user/detalle-user.component.html
@@ -3,26 +3,39 @@
     <div class="row">
       <form #detailUserForm="ngForm">
         <div class="row">
-          <div class="col-lg-2">
-              <i class="fa fa-user-circle fa-4x"></i>
-              <div>
-                
-              </div>
-          </div>
           <div class="col-lg-10">
             <div class="row">
               <div class="col-xs-6 col-sm-6 col-md-6 col-lg-6" >
                 <div *ngIf="editing">
-                  <label class="col-xs-12 col-sm-12 col-md-12 col-lg-12">Nombre Completo</label>
-                  <div class="input-group mb-3">
-                    <div class="input-group-prepend">
-                      <span class="input-group-text"><i class="icon-user"></i></span>
+                  <div class="row">
+                    <div class="col-md-4">
+                      <mat-form-field class="input-full-width">
+                        <input matInput type="text" [(ngModel)]="actualizaUser.Nombre" #nomUser="ngModel" id="nomUser" name="nomUser" placeholder="Nombre" required>
+                        <mat-error *ngIf="nomUser.dirty || nomUser.pristine">
+                          El campo Nombre es <strong>requerido</strong>
+                        </mat-error>
+                      </mat-form-field>
                     </div>
-                    <input #inlineEditControl [required]="required" (blur)="onBlur($event)" #nomCUser="ngModel" [name]="value" [(ngModel)]="value" [type]="type" [placeholder]="nomUser" />
+                    <div class="col-md-4">
+                      <mat-form-field class="input-full-width">
+                        <input type="text" matInput [(ngModel)]="actualizaUser.Paterno" #paternoUser="ngModel" id="paternoUser" name="paternoUser" placeholder="Apellido Paterno" required>
+                        <mat-error *ngIf="paternoUser.dirty || paternoUser.pristine">
+                          El campo Paterno es <strong>requerido</strong>
+                        </mat-error>
+                      </mat-form-field>
+                    </div>
+                    <div class="col-md-4 ml-auto">
+                      <mat-form-field class="input-full-width">
+                        <input type="text" matInput [(ngModel)]="actualizaUser.Materno" #maternoUser="ngModel" id="maternoUser" name="maternoUser" placeholder="Apellido Materno" required>
+                        <mat-error *ngIf="maternoUser.dirty || maternoUser.pristine">
+                          El campo Materno es <strong>requerido</strong>
+                        </mat-error>
+                      </mat-form-field>
+                    </div>
                   </div>
                 </div>
                 <div *ngIf="!editing">
-                  <div title="Click to edit" (click)="edit(value)" (focus)="edit(value);" tabindex="0" class="inline-edit">
+                  <div title="Click to edit" (click)="edit(value)" tabindex="0" class="inline-edit">
                     Nombre Completo
                     <i class="cui-pencil"></i>
                     {{value}}&nbsp;
